# Model-Assisted-6D-Pose-Estimation-via-VFH-and-Point-to-Plane-ICP

./: 6D_Pose_estimation_algorithm.cpp  6D_Pose_estimation_method2.cpp  CMakeLists.txt  README.md  camera_task.cpp  camera_task.hpp  config_file.cpp  main.cpp
